# DG2MeshwBoundary

./: .gitignore  CMakeLists.txt  DG2MeshwBoundary.cpp  EXAMPLES.md  MeshConfig.cpp  MeshConfig.h  README.md  config-rhel9.sh  simmeshWboundaryNodes.cpp
cmake/: FindSimModSuite.cmake  FindSimmetrix.cmake  libSimmetrix.pc.in
test/asset/: ltx_gauss_input
